// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

import "google/protobuf/empty.proto";

package mz_repr.adt.range;

message ProtoInvalidRangeError {
    oneof kind {
        google.protobuf.Empty misordered_range_bounds = 1;
        string canonicalization_overflow = 2;
        google.protobuf.Empty invalid_range_bound_flags = 3;
        google.protobuf.Empty discontiguous_union = 4;
        google.protobuf.Empty discontiguous_difference = 5;
    }
}
