// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

import "google/protobuf/empty.proto";

package mz_repr.strconv;

message ProtoParseError {
    oneof kind {
        google.protobuf.Empty out_of_range = 1;
        google.protobuf.Empty invalid_input_syntax = 2;
    }
    string type_name = 1001;
    string input = 1002;
    optional string details = 1003;
}

message ProtoParseHexError {
    oneof kind {
        uint32 invalid_hex_digit = 1;
        google.protobuf.Empty odd_length = 2;
    }
}
